--- a/layouts/partials/li_card.html
+++ b/layouts/partials/li_card.html
@@ -50,7 +50,7 @@
   {{ $filters := slice (images.GaussianBlur 21) (images.Pixelate 8) }}
   {{ $pic_width := $item.Params.image.pic_width | default 718 }}
   {{ $image := .Fill (printf "%dx517 q90 %s" $pic_width $anchor) }}
-  {{ $image_lq := (.Fill (printf "808x455 %s q1" $anchor)).Filter $filters }}
+  {{ $image_lq := (.Fill (printf "%dx517 q90 %s" $pic_width $anchor)).Filter $filters }}
   <a href="{{ $item.RelPermalink }}">
     <div class="img-hover-zoom"><img src="{{ $image_lq.RelPermalink }}" data-src="{{ $image.RelPermalink }}" class="article-banner lazyload" alt="{{ $item.Title }}"></div>
   </a>
